--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v2
       with:
         go-version: 1.17
 
@@ -25,10 +25,10 @@ jobs:
       run: go mod download
 
     - name: Build
-      run: GOOS=windows GOARCH=amd64 go build -o GoYoung.exe
+      run: GOOS=windows GOARCH=amd64 go build -tags="gl" -o GoYoung.exe
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
         name: GoYoung
         path: GoYoung.exe
